# cHaTTP

./: .gitignore  LICENSE  README.md  env_vars.sh
conf/: nginx-conf.mkd
doc/: architecture.dia  architecture.mkd  error-codes.mkd  flow.dia  nginx-conf.mkd  webapp-threads.dia
doc/protocols/: broker-to-broker.mkd  http-messages.mkd  http-webapp.mkd  message-broker-message-relay.mkd  persistence-protocol.mkd  webapp-message-broker.mkd
mesg-relay/: Main.hs  generate-protocol-code.sh  mesg-relay.cabal
mesg-relay/Chattp/Relay/: Config.hs  Protocol.hs  Router.hs
message-broker/: CMakeLists.txt  README.mkd  doxyconf  env_vars.sh  error-codes.mkd  message-broker.kdev4
message-broker/src/: CMakeLists.txt  broker-util.cpp  broker-util.hpp  broker.cpp  broker.hpp  broker2broker.cpp  broker2broker.hpp  cache.cpp  cache.hpp  conf.cpp  conf.hpp  epoll.hpp  error.cpp  error.hpp  ipc.cpp  ipc.hpp  main.cpp  message-relay.cpp  message-relay.hpp  persistent.cpp  persistent.hpp  receivable.hpp  sequence-number.cpp  sequence-number.hpp  synchronization.cpp  synchronization.hpp  transaction-maps.cpp  transaction-maps.hpp  user-cache.cpp  user-cache.hpp  user_cache.cpp  user_cache.hpp  webapp-proto.cpp  webapp-proto.hpp
message-broker/tests/: CMakeLists.txt  manual-protocol-tester.cpp  misc-test.cpp  persistence-protocol.cpp  protocols.cpp  test-main.cpp  web-app.cpp
message-broker/tests/ManualTest/: CMakeLists.txt  manual-protobuf.cpp  message.pb.cc  message.pb.h  messagerelay.pb.cc  messagerelay.pb.h  persistence.pb.cc  persistence.pb.h  proto_compile.sh  webapp.pb.cc  webapp.pb.h
persistence-layer/: persistence-layer.cabal  persistence.hs
persistence-layer/Chattp/Persistence/: Auth.hs  Command.hs  Config.hs  Interface.hs  Locator.hs  MessageStorage.hs
persistence-pg/: LICENSE  Main.hs  admin.sql  generate-protocol-code.sh  persistence-pg.cabal  schema.sql
persistence-pg/Chattp/PersistencePg/: Config.hs  Database.hs  Talk.hs
protocols/: broker2broker.proto  message.proto  messagerelay.proto  persistence.proto  webapp.proto
webapp/: Main.hs  cHaTTP-webapp.cabal  generate-protocol-code.sh
webapp-cpp/: CMakeLists.txt  README.md  main.cpp
webapp-cpp/src/: CMakeLists.txt  conf.cpp  conf.hpp  error.hpp  fastcgi.cpp  fastcgi.hpp  fcgi-reply.cpp  fcgi-reply.hpp  ipc.cpp  ipc.hpp  json.cpp  json.hpp  protocol.cpp  protocol.hpp  requesturi.cpp  requesturi.hpp  transactions.cpp  transactions.hpp  url.cpp  url.hpp  utils.hpp
webapp-cpp/tests/: CMakeLists.txt  test.cpp
webapp/Chattp/Webapp/: Conf.hs  FastCGI.hs  IPC.hs  InternalCommunication.hs  Protocol.hs  Storage.hs  Types.hs
webapp/Tests/: Main.hs  MainTest.hs
